# voice-activate-claude

./: .gitignore  README.md  config.example.toml  flake.nix  pyproject.toml  setup.cmd
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml
docs/: e2e-checklist.md  progress.md  startup.md  wake-model-training.md
docs/superpowers/plans/: 2026-06-11-voice-activate-claude.md  2026-07-12-injection-speedup.md
docs/superpowers/specs/: 2026-06-11-voice-activate-claude-design.md  2026-07-11-injection-speedup-design.md
scripts/: create-shortcut.ps1  install-startup.ps1  run-vac.ps1  uninstall-startup.ps1
src/vac/: __main__.py  check.py  clipboard.py  config.py  devices.py  endpointer.py  orchestrator.py  ports.py  tray.py
src/vac/adapters/: claude_driver.py  mic.py  sound.py  vad.py  wakeword.py  whisper.py  window_identity.py
tests/: test_check.py  test_clipboard.py  test_config.py  test_devices.py  test_endpointer.py  test_orchestrator.py  test_window_identity.py
