[project]
name = "voice-activate-claude"
version = "0.1.0"
description = "Voice-activate Claude Desktop on Windows with a wake word"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4.6; sys_platform == 'win32'",
    "openwakeword>=0.6.0; sys_platform == 'win32'",
    "faster-whisper>=1.0.0; sys_platform == 'win32'",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "pillow>=10.0; sys_platform == 'win32'",
    "silero-vad>=5.1; sys_platform == 'win32'",
    "torch>=2.0; sys_platform == 'win32'",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
